--- a/html_advanced/12-index.html
+++ b/html_advanced/12-index.html
@@ -73,9 +73,9 @@
 				<article>
 					<p>Digital Life</p>
 					<h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. <br>
-					Quid enim est a Chrysippo praetermissum in Stoicis? <br>
-					Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+					Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. <br>
+					Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
 				</article>
 				<article>
 					<p>Social</p>
