--- a/html_advanced/10-index.html
+++ b/html_advanced/10-index.html
@@ -45,7 +45,7 @@
 				</article>
 			</section>
 			<section>
-				<h2>About us</h2>
+				<h2>About Us</h2>
 				<h3>Who are we</h3>
 				<h3>Our cultura</h3>
 				<h3>How we work</h3>
