--- a/html_advanced/12-index.html
+++ b/html_advanced/12-index.html
@@ -50,39 +50,28 @@
 				<h2>About us</h2>
 				<p>Everything about us</p>
 				<h3>Who are we</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>
-				Ipsum, omnis expedita! <br>
-				Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
 				<h3>Our cultura</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>
-				Ipsum, omnis expedita! <br>
-				Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
 				<h3>How we work</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>
-				Ipsum, omnis expedita! <br>
-				Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
 			</section>
 			<section>
 				<h2>Latest news</h2>
 				<article>
 					<p>Carrer</p>
 					<h3>Hoc loco tenere se Triarius non potuit.</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. <br>
-					Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
 				</article>
 				<article>
 					<p>Digital Life</p>
 					<h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
-					Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. <br>
-					Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
 				</article>
 				<article>
 					<p>Social</p>
 					<h3>Bestiarum vero nullum iudicium puto.</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. <br>
-					Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. <br>
-					Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
 				</article>
 			</section>
 			<section>
