--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -22,6 +22,8 @@
 			<nav>
 			</nav>
 		</header>
+		<br>
+		<!-- Main -->
 		<main>
 			<h1>Homepage</h1>
 			<section>
@@ -29,6 +31,8 @@
 					<h2>We help you build your brand!</h2>
 				</div>
 			</section>
+			<br>
+			<!-- Services section -->
 			<section>
 				<div>
 					<header>
@@ -45,6 +49,8 @@
 					</div>
 				</div>
 			</section>
+			<br>
+			<!-- Works section -->
 			<section>
 				<div>
 					<header>
@@ -64,6 +70,8 @@
 					</div>
 				</div>
 			</section>
+			<br>
+			<!-- About Us section -->
 			<section>
 				<div>
 					<header>
@@ -80,6 +88,8 @@
 					</div>
 				</div>
 			</section>
+			<br>
+			<!-- Latest news section -->
 			<section>
 				<div>
 					<header>
@@ -104,6 +114,8 @@
 					</div>
 				</div>
 			</section>
+			<br>
+			<!-- Testimonials section -->
 			<section>
 				<div>
 					<header>
@@ -117,6 +129,8 @@
 					</div>
 				</div>
 			</section>
+			<br>
+			<!-- Contact section -->
 			<section>
 				<div>
 					<header>
@@ -129,6 +143,8 @@
 				</div>
 			</section>
 		</main>
+		<br>
+		<!-- Footer -->
 		<footer>
 			<div>Footer</div>
 		</footer>
