--- a/html_advanced/18-index.html
+++ b/html_advanced/18-index.html
@@ -17,12 +17,14 @@
 		<!-- Header -->
 		<header>
 			<div>
-				<a href="root/">
-					<span>Techium</span>
-				</a>
+				<div>
+					<a href="root/">
+						<span>Techium</span>
+					</a>
+				</div>
+				<nav>
+				</nav>
 			</div>
-			<nav>
-			</nav>
 		</header>
 		<br>
 		<!-- Main -->
