id in the heading

--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -46,10 +46,10 @@
 			</section>
 			<br>
 			<!-- Services section -->
-			<section id="Services">
+			<section>
 				<div>
 					<header>
-						<h2>Services</h2>
+						<h2 id="Services">Services</h2>
 						<p>We work with you</p>
 					</header>
 					<div>
