--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -48,8 +48,8 @@
 			<!-- Services section -->
 			<section>
 				<div>
-					<header>
-						<h2 id="Services">Services</h2>
+					<header id="Services">
+						<h2>Services</h2>
 						<p>We work with you</p>
 					</header>
 					<div>
