--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -23,13 +23,13 @@
 					</a>
 				</div>
 				<nav>
-					<a href ="/">Home</a>
-					<a href ="#Services">Services</a>
-					<a href ="">Works</a>
-					<a href ="">About</a>
-					<a href ="">Latest news</a>
-					<a href ="">Testimonials</a>
-					<a href ="">Contact</a>
+					<a href="/">Home</a>
+					<a href="#Services">Services</a>
+					<a href="">Works</a>
+					<a href="">About</a>
+					<a href="">Latest news</a>
+					<a href="">Testimonials</a>
+					<a href="">Contact</a>
 				</nav>
 			</div>
 		</header>
@@ -46,9 +46,9 @@
 			</section>
 			<br>
 			<!-- Services section -->
-			<section>
+			<section id="Services">
 				<div>
-					<header id="Services">
+					<header>
 						<h2>Services</h2>
 						<p>We work with you</p>
 					</header>
