--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -46,8 +46,8 @@
 			</section>
 			<br>
 			<!-- Services section -->
-			<section id="Services">
-				<div>
+			<section>
+				<div id="Services">
 					<header>
 						<h2>Services</h2>
 						<p>We work with you</p>
