--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -25,11 +25,11 @@
 				<nav>
 					<a href="/">Home</a>
 					<a href="#Services">Services</a>
-					<a href="">Works</a>
-					<a href="">About</a>
-					<a href="">Latest news</a>
-					<a href="">Testimonials</a>
-					<a href="">Contact</a>
+					<a href="Works">Works</a>
+					<a href="About">About</a>
+					<a href="News">Latest news</a>
+					<a href="Testimonials">Testimonials</a>
+					<a href="Contact">Contact</a>
 				</nav>
 			</div>
 		</header>
@@ -66,7 +66,7 @@
 			<!-- Works section -->
 			<section>
 				<div>
-					<header>
+					<header id="Works">
 						<h2>Works</h2>
 						<p>Take a look in our portfolio</p>
 					</header>
@@ -86,7 +86,7 @@
 			<br>
 			<!-- About Us section -->
 			<section>
-				<div>
+				<div id="About">
 					<header>
 						<h2>About Us</h2>
 						<p>Everything about us</p>
@@ -103,7 +103,7 @@
 			</section>
 			<br>
 			<!-- Latest news section -->
-			<section>
+			<section id="News">
 				<div>
 					<header>
 						<h2>Latest news</h2>
