--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -25,11 +25,11 @@
 				<nav>
 					<a href="/">Home</a>
 					<a href="#Services">Services</a>
-					<a href="Works">Works</a>
-					<a href="About">About</a>
-					<a href="News">Latest news</a>
-					<a href="Testimonials">Testimonials</a>
-					<a href="Contact">Contact</a>
+					<a href="#Works">Works</a>
+					<a href="#About">About</a>
+					<a href="#News">Latest news</a>
+					<a href="#Testimonials">Testimonials</a>
+					<a href="#Contact">Contact</a>
 				</nav>
 			</div>
 		</header>
