--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -49,8 +49,8 @@
 			<section>
 				<div>
 					<header>
-						<h2 id="Services">Services</h2>
-						<p>We work with you</p>
+						<h2>Services</h2>
+						<p id="Services">We work with you</p>
 					</header>
 					<div>
 						<h3>Design & Concept</h3>
