--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -27,7 +27,7 @@
 					<a href="#services">Services</a>
 					<a href="#works">Works</a>
 					<a href="#about">About</a>
-					<a href="#news">Latest news</a>
+					<a href="#latest_news">Latest news</a>
 					<a href="#testimonials">Testimonials</a>
 					<a href="#contact">Contact</a>
 				</nav>
@@ -50,7 +50,7 @@
 				<div>
 					<header>
 						<h2>Services</h2>
-						<p id="services">We work with you</p>
+						<p>We work with you</p>
 					</header>
 					<div>
 						<h3>Design & Concept</h3>
@@ -66,7 +66,7 @@
 			<!-- Works section -->
 			<section>
 				<div>
-					<header id="works">
+					<header>
 						<h2>Works</h2>
 						<p>Take a look in our portfolio</p>
 					</header>
@@ -86,7 +86,7 @@
 			<br>
 			<!-- About Us section -->
 			<section>
-				<div id="about">
+				<div>
 					<header>
 						<h2>About Us</h2>
 						<p>Everything about us</p>
@@ -103,7 +103,7 @@
 			</section>
 			<br>
 			<!-- Latest news section -->
-			<section id="news">
+			<section>
 				<div>
 					<header>
 						<h2>Latest news</h2>
