--- a/html_advanced/21-index.html
+++ b/html_advanced/21-index.html
@@ -24,12 +24,12 @@
 				</div>
 				<nav>
 					<a href="/">Home</a>
-					<a href="#Services">Services</a>
-					<a href="#Works">Works</a>
-					<a href="#About">About</a>
-					<a href="#News">Latest news</a>
-					<a href="#Testimonials">Testimonials</a>
-					<a href="#Contact">Contact</a>
+					<a href="#services">Services</a>
+					<a href="#works">Works</a>
+					<a href="#about">About</a>
+					<a href="#latest_news">Latest news</a>
+					<a href="#testimonials">Testimonials</a>
+					<a href="#contact">Contact</a>
 				</nav>
 			</div>
 		</header>
@@ -50,7 +50,7 @@
 				<div>
 					<header>
 						<h2>Services</h2>
-						<p id="Services">We work with you</p>
+						<p>We work with you</p>
 					</header>
 					<div>
 						<h3>Design & Concept</h3>
@@ -66,7 +66,7 @@
 			<!-- Works section -->
 			<section>
 				<div>
-					<header id="Works">
+					<header>
 						<h2>Works</h2>
 						<p>Take a look in our portfolio</p>
 					</header>
@@ -86,7 +86,7 @@
 			<br>
 			<!-- About Us section -->
 			<section>
-				<div id="About">
+				<div>
 					<header>
 						<h2>About Us</h2>
 						<p>Everything about us</p>
@@ -103,7 +103,7 @@
 			</section>
 			<br>
 			<!-- Latest news section -->
-			<section id="News">
+			<section>
 				<div>
 					<header>
 						<h2>Latest news</h2>
