--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -147,8 +147,22 @@
 								</p>		
 							</blockquote>
 						</article>
-						<article>Testimonial 2</article>
-						<article>Testimonial 3</article>
+						<article>
+							<blockquote>
+								<p>Thank you so much for your help. Techium company is awesome!
+									<cite>Dorrie S.</cite>
+								</p>		
+							</blockquote>
+
+						</article>
+						<article>
+							<blockquote>
+								<p>I love your system. Definitely worth the investment. I'd be lost without Techium company.
+									<cite>Sven H.</cite>
+								</p>		
+							</blockquote>
+
+						</article>
 					</div>
 				</div>
 			</section>
