--- a/html_advanced/35-index.html
+++ b/html_advanced/35-index.html
@@ -193,7 +193,7 @@
 		<footer>
 			<img 
 			src="logo-black.png"
-			alt="Tehium logo"
+			alt="Techium logo"
 			width="160px"
 			height="40px">
 			<address>234 Washington Street<br>
