--- a/html_advanced/36-index.html
+++ b/html_advanced/36-index.html
@@ -110,7 +110,7 @@
 					<div>
 						<img 
 						src="images/pic-about-us.jpg"
-						alt="empty"
+						alt=""
 						width="460px"
 						height="447px">
 						<h3>Who are we</h3>
@@ -135,7 +135,7 @@
 							<div>
 								<img
 								src="images/pic-blog-01.jpg"
-								alt="empty"
+								alt=""
 								width="305px"
 								height="205px">
 							</div>
@@ -148,7 +148,7 @@
 							<div>
 								<img
 								src="images/pic-blog-02.jpg"
-								alt="empty"
+								alt=""
 								width="305px"
 								height="205px">
 							</div>
@@ -161,7 +161,7 @@
 							<div>
 								<img
 								src="images/pic-blog-03.jpg"
-								alt="empty"
+								alt=""
 								width="305px"
 								height="205px">
 							</div>
