--- a/html_advanced/36-index.html
+++ b/html_advanced/36-index.html
@@ -80,19 +80,19 @@
 					<div>
 						<article>
 							<div>
-								<img src="pic-work-01.jpg" alt="empty">
+								<img src="pic-work-01.jpg" alt="">
 							</div>
 							<h3><a href="#">Interior Design</a></h3>
 						</article>
 						<article>
 							<div>
-								<img src="pic-work-02.jpg" alt="empty">
+								<img src="pic-work-02.jpg" alt="">
 							</div>
 							<h3><a href="#">Web Development</a></h3>
 						</article>
 						<article>
 							<div>
-								<img src="pic-work-03.jpg" alt="empty">
+								<img src="pic-work-03.jpg" alt="">
 							</div>
 							<h3><a href="#">Personal Brand</a></h3>
 						</article>
